# cdz-bot

./: .gitignore  CMakeLists.txt  cdz-bot.service
src/: VkApi.cpp  VkApi.hpp  config.hpp  main.cpp  main.hpp  parser.cpp  parser.hpp  worker.cpp  worker.hpp
